# diler_bot

./: ..gitignore.un~  .gitignore  README.md  deploy.txt  docker-compose.yml  env  exemple.env  exp  exp.c  json_parser.c  json_parser.h  main  main.c  my_local.conf  roulette  roulette.c  roulette.h  telegramm  telegramm.c  telegramm.h
.ssh/: id_rsa  id_rsa.pub  known_hosts  known_hosts.old
books/: progintro_e2_examples.tgz
parser/magnit/: pyproject.toml
parser/magnit/magnit/: data.csv
parser/magnit/magnit/magnit/: items.py  settings.py
parser/magnit/magnit/magnit/spiders/: constanst.py  functions.py  products_spider.py
